ACR2-2027: Alignment issue on mobile fixed for cart page.

--- a/docroot/themes/custom/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -1517,10 +1517,6 @@ header {
 
   @include breakpoint($only-mobile) {
     max-width: 10rem;
-
-    html[lang=ar] & {
-      max-width: 6.5625rem;
-    }
   }
 
   a {
